--- a/views/google_auth.pug
+++ b/views/google_auth.pug
@@ -1,7 +1,8 @@
 doctype html
 html
     head
-        title="Logowanie do Google "
+        title="Logowanie do Google"
+        link(rel="stylesheet", href="../style.css", type="text/css")
     body
         h1 Strona logowania do konta Google
         p Podaj swój login i hasło aby się zalogować
