--- a/views/google_logged_in.pug
+++ b/views/google_logged_in.pug
@@ -2,5 +2,6 @@ doctype html
 html
     head
         title="Dostęp autoryzowany"
+        link(rel="stylesheet", href="../style.css", type="text/css")
     body
-        h4 Jesteś zalogowany do GOOGLE (fake)
+        h1 Jesteś zalogowany do GOOGLE (fake)
