add true google auth

--- a/views/index.pug
+++ b/views/index.pug
@@ -1,8 +1,9 @@
 doctype html
 html
     head
-        title="Logowanie do Google "
+        title="Logowanie do Google"
+        link(rel="stylesheet", href="style.css", type="text/css")
     body
-        h1 Logowanea do konta Google
+        h1 Logowanie do konta Google
         form(action="/auth/google")
             button(type="submit") Zaloguj się przez Google
